[tool.poetry]
name = "StormTrays"
version = "2.1.0"
description = "An open-source tower defense written in python with pygame"
authors = ["Minigrim0"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
rope = "^0.22.0"
black = "^21.11b1"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
